Cambiando diseño de opciones de bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -146,13 +146,13 @@
                                                     <div class="table-responsive">
                                                         <table class="table table-hover" style="margin-bottom: 0px;">
                                                             <thead>
-                                                            <th style=" padding: 2px;">Hotel</th>
-                                                            <th style=" padding: 2px;">Categoria</th>
-                                                            <th style=" padding: 2px;">Habitaci&oacute;n</th>
-                                                            <th style=" padding: 2px;">Plan Alimenticio</th>
+                                                            <th style=" padding: 2px; ">Hotel</th>
+                                                            <th style=" padding: 2px; width: 80px;">Categoria</th>
+                                                            <th style=" padding: 2px; width: 80px;">Habitaci&oacute;n</th>
+                                                            <th style=" padding: 2px; width: 90px;">P. Alimenticio</th>
                                                             <th></th>
                                                             <th></th>
-                                                            <th></th>
+                                                            <th width="58px" ></th>
                                                             </thead>
                                                             <tbody class="selects" id="opcionesPrograma<?php echo $cnt ?>">
                                                         
