se cambia check de condiciones del servicio y funcion de bloqueos y se separan en un js de bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -67,11 +67,11 @@
                         <h4 class="modal-title" id="tituloPopup">Condiciones</h4>
                     </div>
 
-                    <div class="modal-body" id="divPopupCon" style="max-height: 400px;  overflow-y: scroll;">
+                    <div class="modal-body" id="divPopupCon" style="max-height: 500px;  overflow-y: scroll;">
                         
                         
                     </div>
-                    <div class="modal-footer">
+                    <!--<div class="modal-footer">
                         <center>
                             <table >
                                 <tr>
@@ -81,14 +81,14 @@
                                 </tr>
                             </table>
                             <br>
-                            <table style="height: 30px; width: 219px;">
+                            <!--<table style="height: 30px; width: 219px;">
                                 <tr>
-                                <td><input type="button" class="btn btn-primary " id="aceptarCondiciones" value="Aceptar"></td>
+                                <td><input type="button" class="btn btn-primary " id="aceptarCondiciones" onclick="Bloqueo.prototype.aceptarCondiciones();"value="Aceptar"></td>
                                     <td><input type="button"class="btn btn-primary  pull-right"onclick="fadeOut('condicionesPopup');fadeOut('detallePopup');$('#rP_btnProcesaRserva').prop('disabled',false);" value="Cancelar"></td>
                                 </tr>
                             </table>
                         </center>
-                    </div>
+                    </div>-->
                 </div>
                     
                     <div class="panel-group panel-info" id="accordion">
