--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -19,7 +19,7 @@ if ($this->objOpcBloqueos) {
                 ?>
 
                 <td style="color: #DF5F00; padding: 2px; vertical-align: middle;">
-                    <a class="tool"title='<?php echo $OP_ciudad[$i]; ?>'
+                    <a name="tooltip_hotel"title='<?php echo $OP_ciudad[$i]; ?>'
                        style="opacity: 1;cursor:pointer; " 
                        data-toggle='modal' 
                        href='#myModal' 
@@ -109,7 +109,7 @@ if ($this->objOpcBloqueos) {
                       ?>
 
         <td style="color:#F00; text-align:right; " width="70px" rowspan="<?php echo $i; ?>">
-            <span class="tooltip" style="opacity: 1;color:#F00;z-index:5;"onmouseover="tooltip.pop(this, '<?php
+            <span name="tooltip_hotel" style="color:#F00;z-index:5;"title ='<?php
                       if (isset($OP_tipoHabi[0]) && $OP_tipoHabi[0] != '') {
                           echo 'Habitacion 1: ' . $OP_tipoHabi[0] . '<br>';
                       }
@@ -119,7 +119,7 @@ if ($this->objOpcBloqueos) {
                       if (isset($OP_tipoHabi[2]) && $OP_tipoHabi[2] != '') {
                           echo 'Habitacion 3: ' . $OP_tipoHabi[2] . '<br>';
                       }
-                      ?>', {position: 0})" >
+                      ?>' >
         <?php echo Functions::formatoValor($objOpcProg->getMoneda(), ($OP_valores[0] + $OP_valores[1] + $OP_valores[2])); ?>
             </span>
         </td>
@@ -148,7 +148,8 @@ if ($this->objOpcBloqueos) {
 <?php } ?>
 <script>
     $(document).ready(function () {
-        $('.tool').tooltip();
+        
+        $( "[name$='tooltip_hotel']" ).poshytip({ className: "tip-darkgray", alignY : "top" });
 
     });
 </script>
