Cambiano diseño de opciones de bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -145,9 +145,9 @@
                                                 <div class="panel-body">
                                                     <div class="table-responsive">
                                                         <table class="table table-hover" style="margin-bottom: 0px;">
-                                                            <thead>
-                                                            <th style=" padding: 2px; ">Hotel</th>
-                                                            <th style=" padding: 2px; width: 80px;">Categoria</th>
+                                                            <thead style="background-color:#34495e; color: #FFFFFF">
+                                                            <th style=" padding: 2px; text-align: center;">Hotel</th>
+                                                            <th style=" padding: 2px; width: 80px; text-align: center;">Categ.</th>
                                                             <th style=" padding: 2px; width: 80px;">Habitaci&oacute;n</th>
                                                             <th style=" padding: 2px; width: 90px;">P. Alimenticio</th>
                                                             <th></th>
