modificando hover de la tabla opciones bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -1,7 +1,10 @@
 <script type="text/javascript" src="http://www.google.com/jsapi?key=AIzaSyByJ-PrjAq7ZDCa8_bCGYB-hzoAJcInrug"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 
-
+<style>
+.tabla-hover table>tbody>tr:hover{background: #FFF;}
+.hover-td:hover{background-color:#f7f8fa;}
+</style>
 <div id="page-content">
     <div id='wrap'>
         <div id="page-heading">
@@ -144,7 +147,7 @@
 
                                                 <div class="panel-body">
                                                     <div class="table-responsive">
-                                                        <table class="table table-hover" style="margin-bottom: 0px;">
+                                                        <table class="table tabla-hover" style="margin-bottom: 0px;">
                                                             <thead style="background-color:#34495e; color: #FFFFFF">
                                                             <th style=" padding: 2px; text-align: center;">Hotel</th>
                                                             <th style=" padding: 2px; width: 80px; text-align: center;">Categ.</th>
