--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -175,9 +175,19 @@
 
 
             </table>
-
+            <br>
             <center>
-                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick="Programa.prototype.abrirCondiciones('<?php echo BASE_URL; ?>programas/programasCondiciones'); Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG','<?php echo $this->form;?>','<?php echo BASE_URL; ?>programas/programasCondiciones')"> RESERVAR </a>
+            <table>
+        <tr>
+            <td style="width: 20px;"><input type="checkbox" id="checkCondiciones"onchange="Programa.prototype.aceptarCondiciones();"></td>
+            <td>He leido y acepto las <a onclick="Programa.prototype.abrirCondiciones('<?php echo BASE_URL; ?>programas/programasCondiciones');">condiciones</a></td>
+
+        </tr>
+    </table>
+        </center>
+            <br>
+            <center>
+                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick=" Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG','<?php echo $this->form;?>','<?php echo BASE_URL; ?>programas/programasCondiciones')"> RESERVAR </a>
             </center>
         </form>
     </div>
