--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -42,15 +42,15 @@
                 
                 <div class="modal-content" id="condicionesPopup" style="position: fixed; left: 200px; top:10%; bottom: 10%; right: 210px; z-index: 9999; display: none;">
                     <div class="modal-header">
-                        <button type="button" class="close" id="btnCerrarCon" style="display:block" onclick="fadeOut('condicionesPopup');fadeOut('detallePopup');">&times;</button>
+                        <button type="button" class="close" id="btnCerrarCon" style="display:block" onclick="fadeOut('condicionesPopup');">&times;</button>
                         <h4 class="modal-title" id="tituloPopup">Condiciones</h4>
                     </div>
 
-                    <div class="modal-body" id="divPopupCon" style="max-height: 400px;  overflow-y: scroll;">
+                    <div class="modal-body" id="divPopupCon" style="max-height: 500px;  overflow-y: scroll;">
                         
                         
                     </div>
-                    <div class="modal-footer">
+                    <!--<div class="modal-footer">
                         <center>
                             <table >
                                 <tr>
@@ -67,7 +67,7 @@
                                 </tr>
                             </table>
                         </center>
-                    </div>
+                    </div>-->
                 </div>
                 
                 
