se agrega validacion en la parte de programas sobre la cantidad de child dependiendo el plan

--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -276,7 +276,9 @@ if($this->objOpcProgramas) {
                                        '<?php echo $this->form?>',
                                         <?php echo htmlspecialchars(json_encode($DP_thHot)) ;?>,
                                         <?php echo htmlspecialchars(json_encode($DP_hoteles)) ;?>,
-                                        <?php echo htmlspecialchars(json_encode($DP_planAl)) ;?>
+                                        <?php echo htmlspecialchars(json_encode($DP_planAl)) ;?>,
+                                        '<?php echo$objOpcProg->getChd1();?>',
+                                        '<?php echo$objOpcProg->getChd2();?>'           
                                        );"> RESERVAR 
                         </a>
                     </td>
