se agrega validacion para check en condiciones

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -257,3 +257,11 @@ Session::set('sessRP_cntPasajeros', $rP_cntRegistros);
     </center>
 
 </form>
+<script>
+        $(document).ready(function(){
+            
+            if(Bloqueo.prototype.B_aceptar_cond){
+                $("#checkCondiciones").prop('checked', true);
+            }
+        });
+        </script> 
