se agregan tooltips en los titulos de la parte de bloqueo, la fecha desde en la parte de bloqueos y el menor valor del bloqueo en el titulo

--- a/views/programas/centerBox/pasajeros.phtml
+++ b/views/programas/centerBox/pasajeros.phtml
@@ -78,7 +78,7 @@
             <?php for($i=1; $i<=3; $i++) { ?>
                 <div id="<?php echo $this->cntP; ?>_DP_tblHab_B_<?php echo $i; ?>" style="display:none;">
                     <table width="100%" border="0" cellspacing="0" cellpadding="5">
-                        <tr><td colspan="4"><center>Habitaci&oacute;n <?php echo $i;?></center></td></tr>
+                        <tr><td colspan="4"><b>Habitaci&oacute;n <?php echo $i;?></b></td></tr>
                         <tr>
                             <td>Adultos</td>
                             <td>
